# sycop

./: .gitignore  README.md  check_results.sh  pyproject.toml  run_evaluation.sh  run_test.sh
configs/: run_test.yaml  run_v1.yaml
data/: system_prompt.txt
data/lexicons/: epistemic_markers.txt  rapport_markers.txt
data/prompts/: suite_v1.yaml  suite_v1_heldout.yaml
report/: human_audit_template.csv
scripts/: analyze_by_category.py  analyze_interventions.py  analyze_turn_drift.py  compute_audit_agreement.py  create_category_plot.py  create_google_sheets_audit.py  generate_neurips_plots.py  sample_for_audit.py
src/sycop/: __init__.py  artifacts.py  cli.py  config.py  enforcement.py  labeling.py  metrics.py  models.py  runner.py  stats.py  storage.py  suite.py  viz.py
src/sycop/prompts/: correction_strength_prompt.txt  gate_prompt.txt  rewrite_prompt.txt
